Frontend: fixed double-spacing below header.

--- a/static/pacc.css
+++ b/static/pacc.css
@@ -60,10 +60,6 @@ header h1 a:hover {
 
 /* end link treatment */
 
-header {
-	margin: 30px 0;
-}
-
 header h1 {
 	font-size: 1.8em;
 	letter-spacing: 0.15em;
